# research

./: ._caffe.ipynb  .gitignore  Makefile  Makefile.archive  autocar.ipynb  caffe.ipynb  contents.ipynb  header.py  mnist.ipynb  mnist_training.py  requirements.txt  service.py
caffe/: Dockerfile  alexnet.proto  alexnet.py  alexnet_pb2.py  classification.py  cnn.ipynb  create_imagenet.sh  create_mnist.sh  get_ilsvrc_aux.sh  get_mnist.sh  mnist.py  run_docker_python.sh  test_lenet.sh  time_lenet.sh  train_lenet.sh
caffe/mnist/: lenet_iter_10000.caffemodel  lenet_iter_10000.solverstate  lenet_iter_5000.caffemodel  lenet_iter_5000.solverstate  lenet_solver.prototxt  lenet_train_test.prototxt
caffe/mnist/mnist_test_lmdb/: lock.mdb
caffe/mnist/mnist_train_lmdb/: lock.mdb
caffe/scripts/: download_model_binary.py
prj/: .gitignore  README.md  requirements.txt
prj/cpp/: CMakeLists.txt
prj/cpp/games101/: CMakeLists.txt
prj/cpp/games101/assignment/src/: CMakeLists.txt  main.cpp
prj/cpp/games101/assignment1/src/: CMakeLists.txt  main.cpp  rasterizer.cpp
prj/cpp/games101/assignment2/src/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
prj/cpp/games101/assignment3/src/: CMakeLists.txt  main.cpp  rasterizer.cpp
prj/cpp/games101/assignment4/src/: main.cpp
prj/cpp/games101/assignment5/src/: Renderer.cpp
prj/cpp/games101/pa0/: CMakeLists.txt  main.cpp
prj/cpp/games101/pa6/Assignment6/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Renderer.cpp  Triangle.hpp  main.cpp
prj/cpp/my_render/: CMakeLists.txt
prj/cpp/my_render/src/: macos.h  macos.m  main.c  main.cc
prj/cpp/my_render/src/xbyi/render/: gc_driver.h  header.h
prj/cpp/opengl/: CMakeLists.txt  Makefile
prj/cpp/opengl/glsl/: gl_research.vert
prj/cpp/opengl/include/: util.h
prj/cpp/opengl/src/: GLBatch.h  GLTools.cc  main  main.cc
prj/cpp/opengl/src/main.dSYM/Contents/Resources/DWARF/: main
prj/cpp/shape_handler/: CMakeLists.txt  main.cc
prj/cpp/shape_handler/shp_lib/test/: shputils.c
prj/math/: modeling.py
prj/notebook/: Bank Marketing Campaign __ Opening a Term D 6d22c6.ipynb  Bank_Marketing_Campaign.ipynb  Machine Learning Practice.ipynb  Untitled.ipynb  Untitled1.ipynb  bc7b8630-fa16-4e59-981a-f184ebb0b4d5.html  f235072a-dcd9-45b7-af5f-5caec2244771.html  machine learning and ADAS session.ipynb  meshplot_tutorial.ipynb  renderer.ipynb  test.html  test.ipynb
prj/notebook/assert/: ._bunny_small.off  ._meshplot_data.npz
prj/notebook/assert/AudiTT/: BP_AudiTT_Animation.uasset  SMC_AudiTT.uasset  SM_AudiTT.uasset  SM_Body_AudiTT_PhysicsAsset.uasset  SM_Body_AudiTT_Skeleton.uasset  SM_sc_audiTT.uasset
prj/notebook/assert/AudiTT/Materials/: MI_Bodywork_AudiTT.uasset  MI_CarLightGlass_AudiTT.uasset  MI_LicensePlate_AudiTT.uasset  MI_LightText_AudiTT.uasset  MI_Lights_AudiTT.uasset  MI_Wheels_AudiTT.uasset  MI_Windows_AudiTT.uasset
prj/notebook/assert/AudiTT/SM_Windows/: SM_AudiTT_v1_lights.uasset  SM_Windows_AudiTT_SM_Windows1.uasset  SM_Windows_AudiTT_SM_Windows2.uasset  SM_Windows_AudiTT_SM_Windows3.uasset  SM_Windows_AudiTT_SM_Windows4.uasset  SM_Windows_AudiTT_SM_Windows5.uasset  SM_Windows_AudiTT_SM_Windows6.uasset
prj/notebook/assert/AudiTT/Texturas/: T_Wheels_AudiTT_d.uasset  T_Wheels_AudiTT_n.uasset  T_Wheels_AudiTT_orm.uasset  Vh_Car_AudiTT_CoverWheelMat_BaseColor.uasset  Vh_Car_AudiTT_CoverWheelMat_BaseColor_Mat.uasset  Vh_Car_AudiTT_CoverWheelMat_Normal.uasset  Vh_Car_AudiTT_LicensePlate_BaseColor.uasset  Vh_Car_AudiTT_LicensePlate_Normal.uasset  Vh_Car_AudiTT_LightBackMat_BaseColor.uasset  Vh_Car_AudiTT_LightBackMat_BaseColor_Mat.uasset  Vh_Car_AudiTT_LightBackMat_Normal.uasset  Vh_Car_AudiTT_LightFrontMat_BaseColor.uasset  Vh_Car_AudiTT_LightFrontMat_BaseColor_Mat.uasset  Vh_Car_AudiTT_LightFrontMat_Normal.uasset  farosText.uasset
prj/python/: requirements.txt
prj/python/yi/: ocr.py
prj/python/yi/adas/: lane_perception.py
prj/python/yi/games201/: mass_spring_explicit.py
prj/python/yi/games201/meta/: base.py  mass_spring_meta.py
prj/python/yi/gc/: gc.py
prj/python/yi/kaggle/severstal-steel-defect-detection/: app.py  notebook_watanabe2362.py
prj/python/yi/keras/: practice.py  simple.py
prj/python/yi/nlp/: spike.py
prj/python/yi/opencv/: opencv_research.py
prj/python/yi/physical/: spring_mass.py
prj/python/yi/scanner/: ._requirements.txt  controller_service_mapping.py  pytest.ini  requirements.txt
prj/python/yi/scanner/test/export/: ._export.csv  export.csv
prj/python/yi/scanner/test/src/main/java/com/icbc/devops/flow/engine/application/archive/web/: FlowController.java  Other.java
prj/python/yi/scanner/test/src/main/java/com/icbc/devops/flow/engine/application/archive/web/websocket/: WebsocketController.java
prj/python/yi/tests/keras/: test_practice.py  test_simple.py
prj/python/yi/tests/math/: test_base.py  test_modeling.py
prj/r/: .RData  .Rhistory  concrete.R  credit.R  dl_lerning.R  insurance.R  letter.R  severstal-steel-defect-detection.R  sms_spam.r  wbcd.r
prj/r/.Rproj.user/1CFFD394/pcs/: files-pane.pper  windowlayoutstate.pper
prj/r/.Rproj.user/1CFFD394/sources/per/t/: 11165627  11165627-contents  2818C342  35896A6  4224CEF  5AA5A782  5AA5A782-contents  705EEF6F  705EEF6F-contents  A0BBBFDC  B786BEC7  B786BEC7-contents  D21A6C35
prj/r/.Rproj.user/1CFFD394/sources/prop/: 61F3162E  CDD90846  INDEX
prj/r/.Rproj.user/1CFFD394/viewer-cache/: 1105DC9E.Rdata
prj/r/.Rproj.user/438870A4/sources/prop/: 6AEF2375  INDEX
prj/r/.Rproj.user/438870A4/sources/s-40B2EC9F/: 2462F766  2462F766-contents  8D94C71B  8D94C71B-contents
prj/r/.Rproj.user/shared/notebooks/: paths
prj/rust/learning/: Cargo.toml
prj/tests/math/: test_modeling.py
prj/yi/math/: modeling.py
prj/yi/tests/math/: test_base.py
