cmake_minimum_required (VERSION 2.8.11)
project(GAMES101)
SET(CMAKE_BUILD_TYPE Debug)

set(EXECUTABLE_OUTPUT_PATH  ${PROJECT_SOURCE_DIR}/bin/)
add_subdirectory(pa0)
add_subdirectory(assignment1/src)
add_subdirectory(assignment2/src)
add_subdirectory(assignment3/src)
add_subdirectory(assignment4/src)
add_subdirectory(assignment5/src)
add_subdirectory(pa6/Assignment6)