cmake_minimum_required(VERSION 3.3.10)
project(my_render LANGUAGES C)
# project(my_render)
set(CMAKE_CONFIGURATION_TYPES "Debug" CACHE STRING "" FORCE)
add_compile_options(-Wno-deprecated-declarations)
include_directories(src})
file(GLOB SOURCE_FILES src/*.c)
set(SOURCE_FILES ${SOURCE_FILES} src/macos.m)
set(TARGET my_render)
add_executable(${TARGET} ${SOURCE_FILES})
set_target_properties(${TARGET} PROPERTIES C_STANDARD 90)
set_target_properties(${TARGET} PROPERTIES C_EXTENSIONS OFF)
set_target_properties(${TARGET} PROPERTIES INTERPROCEDURAL_OPTIMIZATION ON)
target_compile_options(${TARGET} PRIVATE -Wall -Wextra -pedantic)
target_compile_options(${TARGET} PRIVATE -ffast-math)
target_link_libraries(${TARGET} PRIVATE "-framework Cocoa")
