cmake_minimum_required(VERSION 3.3.10)
project(my_render)
# project(my_render)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CONFIGURATION_TYPES "Debug" CACHE STRING "" FORCE)
add_compile_options(-Wno-deprecated-declarations)


macro(compile_macos)
    add_library(${PROJECT_NAME}-Lib SHARED src/macos.h src/macos.m)
    # generate_export_header(${PROJECT_NAME}-macos)
    set_target_properties(${PROJECT_NAME}-Lib PROPERTIES INTERPROCEDURAL_OPTIMIZATION ON)
    target_compile_options(${PROJECT_NAME}-Lib PRIVATE -Wall -Wextra -pedantic)
    target_compile_options(${PROJECT_NAME}-Lib PRIVATE -ffast-math)
    target_link_libraries(${PROJECT_NAME}-Lib PRIVATE "-framework Cocoa")
endmacro()

compile_macos()

# file(GLOB SOURCE_FILES src/*.c)
# set(SOURCE_FILES ${SOURCE_FILES} src/macos.m)
# include_directories(src})
set(TARGET my_render)
add_executable(${TARGET} src/main.cc)
# set_target_properties(${TARGET} PROPERTIES C_STANDARD 90)
# set_target_properties(${TARGET} PROPERTIES C_EXTENSIONS OFF)
# set_target_properties(${TARGET} PROPERTIES INTERPROCEDURAL_OPTIMIZATION ON)
# target_compile_options(${TARGET} PRIVATE -Wall -Wextra -pedantic)
# target_compile_options(${TARGET} PRIVATE -ffast-math)
# target_link_libraries(${TARGET} PRIVATE "-framework Cocoa")
target_link_libraries(${TARGET} ${PROJECT_NAME}-Lib)

