find_package(OpenGL REQUIRED)
# find_package(PkgConfig REQUIRED)
# pkg_check_modules(GLFW REQUIRED glfw3)
find_package(glfw3 3.3 REQUIRED)
find_package(GLUT REQUIRED)
find_package(GLEW REQUIRED)
find_path(GLEW_INCLUDE_DIR GL/glew.h)
SET(LIBRARIES ${GLFW_LIBRARIES} ${OPENGL_LIBRARY} ${GLUT_LIBRARY} ${GLEW_LIBRARY})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include ${OPENGL_INCLUDE_DIR} ${GLFW_INCLUDE_DIRS} ${GLUT_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS})
file(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cc)
set(TARGET_NAME opengl-research)
add_executable(${TARGET_NAME} ${SOURCE_FILES})
target_link_libraries(${TARGET_NAME} ${LIBRARIES})
